--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,15 @@
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
+#idea files
+.idea/
+*.iml
+
 # Package Files #
 *.jar
 *.war
 *.ear
+
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
